src/test/ui/repr/repr-no-niche-inapplicable-to-unions.stderr
error[E0517]: attribute should be applied to a struct or enum
  --> $DIR/repr-no-niche-inapplicable-to-unions.rs:6:8
   |
LL | #[repr(no_niche)]
   |        ^^^^^^^^
LL | pub union Cloaked1 { _A: N16 }
   | ------------------------------ not a struct or enum

error[E0517]: attribute should be applied to a struct or enum
  --> $DIR/repr-no-niche-inapplicable-to-unions.rs:10:8
   |
LL | #[repr(no_niche)]
   |        ^^^^^^^^
LL | pub union Cloaked2 { _A: N16, _B: (u8, N8) }
   | -------------------------------------------- not a struct or enum

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0517`.
